src/test/ui/regions/region-borrow-params-issue-29793-small.nll.stderr
error[E0597]: `x` does not live long enough
  --> $DIR/region-borrow-params-issue-29793-small.rs:9:34
   |
LL |         let f = |t: bool| if t { x } else { y }; // (separate errors for `x` vs `y`)
   |                 ---------        ^ borrowed value does not live long enough
   |                 |
   |                 value captured here
...
LL |     };
   |      - `x` dropped here while still borrowed

error[E0597]: `y` does not live long enough
  --> $DIR/region-borrow-params-issue-29793-small.rs:9:45
   |
LL |         let f = |t: bool| if t { x } else { y }; // (separate errors for `x` vs `y`)
   |                 ---------                   ^ borrowed value does not live long enough
   |                 |
   |                 value captured here
...
LL |     };
   |      - `y` dropped here while still borrowed

error[E0597]: `x` does not live long enough
  --> $DIR/region-borrow-params-issue-29793-small.rs:24:34
   |
LL |         let f = |t: bool| if t { x } else { y }; // (separate errors for `x` vs `y`)
   |                 ---------        ^ borrowed value does not live long enough
   |                 |
   |                 value captured here
...
LL |     };
   |      - `x` dropped here while still borrowed

error[E0597]: `y` does not live long enough
  --> $DIR/region-borrow-params-issue-29793-small.rs:24:45
   |
LL |         let f = |t: bool| if t { x } else { y }; // (separate errors for `x` vs `y`)
   |                 ---------                   ^ borrowed value does not live long enough
   |                 |
   |                 value captured here
...
LL |     };
   |      - `y` dropped here while still borrowed

error[E0597]: `x` does not live long enough
  --> $DIR/region-borrow-params-issue-29793-small.rs:55:34
   |
LL |         let f = |t: bool| if t { x } else { y }; // (separate errors for `x` vs `y`)
   |                 ---------        ^ borrowed value does not live long enough
   |                 |
   |                 value captured here
...
LL |     };
   |     - `x` dropped here while still borrowed
   |
note: borrowed value must be valid for the lifetime 'a as defined on the function body at 54:10...
  --> $DIR/region-borrow-params-issue-29793-small.rs:54:10
   |
LL |     fn g<'a>(x: usize, y:usize) -> Box<Fn(bool) -> usize + 'a> {
   |          ^^

error[E0597]: `y` does not live long enough
  --> $DIR/region-borrow-params-issue-29793-small.rs:55:45
   |
LL |         let f = |t: bool| if t { x } else { y }; // (separate errors for `x` vs `y`)
   |                 ---------                   ^ borrowed value does not live long enough
   |                 |
   |                 value captured here
...
LL |     };
   |     - `y` dropped here while still borrowed
   |
note: borrowed value must be valid for the lifetime 'a as defined on the function body at 54:10...
  --> $DIR/region-borrow-params-issue-29793-small.rs:54:10
   |
LL |     fn g<'a>(x: usize, y:usize) -> Box<Fn(bool) -> usize + 'a> {
   |          ^^

error[E0597]: `x` does not live long enough
  --> $DIR/region-borrow-params-issue-29793-small.rs:66:34
   |
LL |         let f = |t: bool| if t { x } else { y }; // (separate errors for `x` vs `y`)
   |                 ---------        ^ borrowed value does not live long enough
   |                 |
   |                 value captured here
...
LL |     };
   |     - `x` dropped here while still borrowed
   |
note: borrowed value must be valid for the lifetime 'a as defined on the function body at 65:10...
  --> $DIR/region-borrow-params-issue-29793-small.rs:65:10
   |
LL |     fn g<'a>(x: usize, y:usize) -> Box<Fn(bool) -> usize + 'a> {
   |          ^^

error[E0597]: `y` does not live long enough
  --> $DIR/region-borrow-params-issue-29793-small.rs:66:45
   |
LL |         let f = |t: bool| if t { x } else { y }; // (separate errors for `x` vs `y`)
   |                 ---------                   ^ borrowed value does not live long enough
   |                 |
   |                 value captured here
...
LL |     };
   |     - `y` dropped here while still borrowed
   |
note: borrowed value must be valid for the lifetime 'a as defined on the function body at 65:10...
  --> $DIR/region-borrow-params-issue-29793-small.rs:65:10
   |
LL |     fn g<'a>(x: usize, y:usize) -> Box<Fn(bool) -> usize + 'a> {
   |          ^^

error[E0597]: `x` does not live long enough
  --> $DIR/region-borrow-params-issue-29793-small.rs:90:38
   |
LL |             let f = |t: bool| if t { x } else { y }; // (separate errors for `x` vs `y`)
   |                     ---------        ^ borrowed value does not live long enough
   |                     |
   |                     value captured here
...
LL |         }
   |         - `x` dropped here while still borrowed
   |
note: borrowed value must be valid for the lifetime 'a as defined on the method body at 89:14...
  --> $DIR/region-borrow-params-issue-29793-small.rs:89:14
   |
LL |         fn g<'a>(&self, x: usize, y:usize) -> Box<Fn(bool) -> usize + 'a> {
   |              ^^

error[E0597]: `y` does not live long enough
  --> $DIR/region-borrow-params-issue-29793-small.rs:90:49
   |
LL |             let f = |t: bool| if t { x } else { y }; // (separate errors for `x` vs `y`)
   |                     ---------                   ^ borrowed value does not live long enough
   |                     |
   |                     value captured here
...
LL |         }
   |         - `y` dropped here while still borrowed
   |
note: borrowed value must be valid for the lifetime 'a as defined on the method body at 89:14...
  --> $DIR/region-borrow-params-issue-29793-small.rs:89:14
   |
LL |         fn g<'a>(&self, x: usize, y:usize) -> Box<Fn(bool) -> usize + 'a> {
   |              ^^

error[E0597]: `x` does not live long enough
  --> $DIR/region-borrow-params-issue-29793-small.rs:104:38
   |
LL |             let f = |t: bool| if t { x } else { y }; // (separate errors for `x` vs `y`)
   |                     ---------        ^ borrowed value does not live long enough
   |                     |
   |                     value captured here
...
LL |         }
   |         - `x` dropped here while still borrowed
   |
note: borrowed value must be valid for the lifetime 'a as defined on the method body at 103:14...
  --> $DIR/region-borrow-params-issue-29793-small.rs:103:14
   |
LL |         fn g<'a>(&self, x: usize, y:usize) -> Box<Fn(bool) -> usize + 'a> {
   |              ^^

error[E0597]: `y` does not live long enough
  --> $DIR/region-borrow-params-issue-29793-small.rs:104:49
   |
LL |             let f = |t: bool| if t { x } else { y }; // (separate errors for `x` vs `y`)
   |                     ---------                   ^ borrowed value does not live long enough
   |                     |
   |                     value captured here
...
LL |         }
   |         - `y` dropped here while still borrowed
   |
note: borrowed value must be valid for the lifetime 'a as defined on the method body at 103:14...
  --> $DIR/region-borrow-params-issue-29793-small.rs:103:14
   |
LL |         fn g<'a>(&self, x: usize, y:usize) -> Box<Fn(bool) -> usize + 'a> {
   |              ^^

error[E0597]: `x` does not live long enough
  --> $DIR/region-borrow-params-issue-29793-small.rs:132:38
   |
LL |             let f = |t: bool| if t { x } else { y }; // (separate errors for `x` vs `y`)
   |                     ---------        ^ borrowed value does not live long enough
   |                     |
   |                     value captured here
...
LL |         }
   |         - `x` dropped here while still borrowed
   |
note: borrowed value must be valid for the lifetime 'a as defined on the method body at 131:14...
  --> $DIR/region-borrow-params-issue-29793-small.rs:131:14
   |
LL |         fn g<'a>(&self, x: usize, y:usize) -> Box<Fn(bool) -> usize + 'a> {
   |              ^^

error[E0597]: `y` does not live long enough
  --> $DIR/region-borrow-params-issue-29793-small.rs:132:49
   |
LL |             let f = |t: bool| if t { x } else { y }; // (separate errors for `x` vs `y`)
   |                     ---------                   ^ borrowed value does not live long enough
   |                     |
   |                     value captured here
...
LL |         }
   |         - `y` dropped here while still borrowed
   |
note: borrowed value must be valid for the lifetime 'a as defined on the method body at 131:14...
  --> $DIR/region-borrow-params-issue-29793-small.rs:131:14
   |
LL |         fn g<'a>(&self, x: usize, y:usize) -> Box<Fn(bool) -> usize + 'a> {
   |              ^^

error[E0597]: `x` does not live long enough
  --> $DIR/region-borrow-params-issue-29793-small.rs:147:38
   |
LL |             let f = |t: bool| if t { x } else { y }; // (separate errors for `x` vs `y`)
   |                     ---------        ^ borrowed value does not live long enough
   |                     |
   |                     value captured here
...
LL |         }
   |         - `x` dropped here while still borrowed
   |
note: borrowed value must be valid for the lifetime 'a as defined on the method body at 146:14...
  --> $DIR/region-borrow-params-issue-29793-small.rs:146:14
   |
LL |         fn g<'a>(&self, x: usize, y:usize) -> Box<Fn(bool) -> usize + 'a> {
   |              ^^

error[E0597]: `y` does not live long enough
  --> $DIR/region-borrow-params-issue-29793-small.rs:147:49
   |
LL |             let f = |t: bool| if t { x } else { y }; // (separate errors for `x` vs `y`)
   |                     ---------                   ^ borrowed value does not live long enough
   |                     |
   |                     value captured here
...
LL |         }
   |         - `y` dropped here while still borrowed
   |
note: borrowed value must be valid for the lifetime 'a as defined on the method body at 146:14...
  --> $DIR/region-borrow-params-issue-29793-small.rs:146:14
   |
LL |         fn g<'a>(&self, x: usize, y:usize) -> Box<Fn(bool) -> usize + 'a> {
   |              ^^

error[E0597]: `x` does not live long enough
  --> $DIR/region-borrow-params-issue-29793-small.rs:175:38
   |
LL |             let f = |t: bool| if t { x } else { y }; // (separate errors for `x` vs `y`)
   |                     ---------        ^ borrowed value does not live long enough
   |                     |
   |                     value captured here
...
LL |         }
   |         - `x` dropped here while still borrowed
   |
note: borrowed value must be valid for the lifetime 'a as defined on the method body at 174:14...
  --> $DIR/region-borrow-params-issue-29793-small.rs:174:14
   |
LL |         fn g<'a>(&self, x: usize, y:usize) -> Box<Fn(bool) -> usize + 'a> {
   |              ^^

error[E0597]: `y` does not live long enough
  --> $DIR/region-borrow-params-issue-29793-small.rs:175:49
   |
LL |             let f = |t: bool| if t { x } else { y }; // (separate errors for `x` vs `y`)
   |                     ---------                   ^ borrowed value does not live long enough
   |                     |
   |                     value captured here
...
LL |         }
   |         - `y` dropped here while still borrowed
   |
note: borrowed value must be valid for the lifetime 'a as defined on the method body at 174:14...
  --> $DIR/region-borrow-params-issue-29793-small.rs:174:14
   |
LL |         fn g<'a>(&self, x: usize, y:usize) -> Box<Fn(bool) -> usize + 'a> {
   |              ^^

error[E0597]: `x` does not live long enough
  --> $DIR/region-borrow-params-issue-29793-small.rs:189:38
   |
LL |             let f = |t: bool| if t { x } else { y }; // (separate errors for `x` vs `y`)
   |                     ---------        ^ borrowed value does not live long enough
   |                     |
   |                     value captured here
...
LL |         }
   |         - `x` dropped here while still borrowed
   |
note: borrowed value must be valid for the lifetime 'a as defined on the method body at 188:14...
  --> $DIR/region-borrow-params-issue-29793-small.rs:188:14
   |
LL |         fn g<'a>(&self, x: usize, y:usize) -> Box<Fn(bool) -> usize + 'a> {
   |              ^^

error[E0597]: `y` does not live long enough
  --> $DIR/region-borrow-params-issue-29793-small.rs:189:49
   |
LL |             let f = |t: bool| if t { x } else { y }; // (separate errors for `x` vs `y`)
   |                     ---------                   ^ borrowed value does not live long enough
   |                     |
   |                     value captured here
...
LL |         }
   |         - `y` dropped here while still borrowed
   |
note: borrowed value must be valid for the lifetime 'a as defined on the method body at 188:14...
  --> $DIR/region-borrow-params-issue-29793-small.rs:188:14
   |
LL |         fn g<'a>(&self, x: usize, y:usize) -> Box<Fn(bool) -> usize + 'a> {
   |              ^^

error: aborting due to 20 previous errors

For more information about this error, try `rustc --explain E0597`.
